--- a/code/public/about.html
+++ b/code/public/about.html
@@ -79,6 +79,9 @@
             <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="social-link tooltip" data-tip="Linkedin">
               <img class="w-10 h-10" src="icons/linkedin-svgrepo-com.svg" alt="Linkedin" />
             </a>
+            <a href="https://github.com/anaisbl" target="_blank" class="social-link tooltip" data-tip="Github">
+              <img class="w-10 h-10" src="icons/github-svgrepo-com.svg" alt="Github" />
+            </a>
             <a href="mailto:anais.bl@workmail.com" target="_blank" class="social-link tooltip" data-tip="Email">
               <img class="h-10 w-10" src="icons/letter-unread-svgrepo-com.svg" alt="Email" />
             </a>
@@ -170,19 +173,6 @@
     <footer class="footer footer-center bg-secondary p-2">
       <aside>
         <p class="text-primary-content">Copyright © 2025 - All right reserved to Nana</p>
-        <nav>
-          <div class="grid grid-flow-col gap-5 pb-2">
-            <!--<a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-email" width="50" height="50" src="icons/dark/icons8-email-100-green.png" alt="Email" />
-            </a>-->
-            <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-github" width="50" height="50" src="icons/light/icons8-github-100-light.png" alt="Github" />
-            </a>
-            <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-linkedin" width="50" height="50" src="icons/light/icons8-linkedin-100-light.png" alt="Linkedin" />
-            </a>
-          </div>
-        </nav>
       </aside>
     </footer>
 
