--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -80,6 +80,9 @@
             <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="social-link tooltip" data-tip="Linkedin">
               <img class="w-10 h-10" src="icons/linkedin-svgrepo-com.svg" alt="Linkedin" />
             </a>
+            <a href="https://github.com/anaisbl" target="_blank" class="social-link tooltip" data-tip="Github">
+              <img class="w-10 h-10" src="icons/github-svgrepo-com.svg" alt="Github" />
+            </a>
             <a href="mailto:anais.bl@workmail.com" target="_blank" class="social-link tooltip" data-tip="Email">
               <img class="h-10 w-10" src="icons/letter-unread-svgrepo-com.svg" alt="Email" />
             </a>
@@ -110,7 +113,7 @@
         <div class="divider divider-secondary">Let's Connect</div>
         <p class="text-lg mb-2">I'm currently looking for data science roles where I can apply my skills to meaningful projects and continue growing in the field. Feel free to contact me if you like what you see!</p>
         <div class="card sm:w-96 w-80 bg-base-100 shadow-md p-4 flex flex-col justify-center items-center">        
-          <a class="btn btn-outline btn-secondary sm:btn-md btn-sm w-1/2 my-2" onclick="my_modal_1.showModal()">Contact me</a>
+          <a class="btn btn-outline sm:text-lg text-md btn-secondary sm:btn-md btn-sm w-1/2 my-2" onclick="my_modal_1.showModal()">Contact me</a>
           <p class="text-center text-sm">Response time: Usually within 24 hours</p>
         </div>
       </div>
@@ -567,19 +570,6 @@
     <footer class="footer footer-center bg-secondary p-2">
       <aside>
         <p class="text-primary-content">Copyright © 2025 - All right reserved to Nana</p>
-        <nav>
-          <div class="grid grid-flow-col gap-5 pb-2">
-            <!--<a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-email" width="50" height="50" src="icons/dark/icons8-email-100-green.png" alt="Email" />
-            </a>-->
-            <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-github" width="50" height="50" src="icons/light/icons8-github-100-light.png" alt="Github" />
-            </a>
-            <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-linkedin" width="50" height="50" src="icons/light/icons8-linkedin-100-light.png" alt="Linkedin" />
-            </a>
-          </div>
-        </nav>
       </aside>
     </footer>
   </body>
