--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -563,6 +563,41 @@
           </div>
         </div>
 
+        <!--portfolio website-->
+        <div class="project-card" data-topic="webdev" data-complexity="intermediate" data-date="2025">
+          <figure>
+            <img
+              src="img/projects/portfolio_website.png"
+              alt="Screenshot of website landing page"
+              class="project-img"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex justify-between items-center">
+              <h2 class="card-title">
+              Portfolio website
+              </h2>
+              <span>
+                <time class="font-mono text-sm text-info italic">2025</time>
+              </span>
+            </div>
+            <div>
+              <a href="https://github.com/anaisbl/portfolio" target="_blank" class="btn btn-xs btn-outline">
+                View
+                <svg width="16" height="16" fill="currentColor" class="ml-1">
+                  <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                </svg>
+              </a>
+            </div>
+            <p>Built and deployed a custom portfolio website with HTML, Tailwind CSS and Javascript. <br><br> Leveraging Github for project management, issue tracking and deployment to Firebase through Github actions.</p>
+            <div class="card-actions justify-normal py-2">
+              <div class="badge badge-outline badge-success">HTML</div>
+              <div class="badge badge-outline badge-success">Tailwind CSS</div>
+              <div class="badge badge-outline badge-success">Javascript</div>
+              <div class="badge badge-outline badge-warning">Web development</div>
+            </div>
+          </div>
+        </div>
+
       </section>
 
     </div>
