--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -588,7 +588,7 @@
                 </svg>
               </a>
             </div>
-            <p>Built and deployed a custom portfolio website with HTML, Tailwind CSS and Javascript. <br><br> Leveraging Github for project management, issue tracking and deployment to Firebase through Github actions.</p>
+            <p>Built and deployed a custom portfolio website with HTML, Tailwind CSS, Javascript and icons from SVGrepo. <br><br> Leveraging Github for project management, issue tracking and deployment to Firebase through Github actions.</p>
             <div class="card-actions justify-normal py-2">
               <div class="badge badge-outline badge-success">HTML</div>
               <div class="badge badge-outline badge-success">Tailwind CSS</div>
