--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -323,7 +323,7 @@
       <!--project cards-->
       <section class="project my-5 w-full max-w-7xl mx-auto py-4 px-4 flex flex-wrap gap-4 justify-center">
         <!--corto web-->
-        <div class="project-card" data-topic="webdev" data-complexity="intermediate" data-date="2022">
+        <div class="project-card" data-topic="webdev" data-complexity="intermediate" data-date="2022-09">
           <figure>
             <img
               src="img/projects/corto_screen2.png"
@@ -357,7 +357,7 @@
         </div>
 
         <!--bank cli system-->
-        <div class="project-card" data-topic="softdev" data-complexity="basic" data-date="2023">
+        <div class="project-card" data-topic="softdev" data-complexity="basic" data-date="2023-10">
           <figure>
             <img
               src="img/projects/oop_ca_screen2.png"
@@ -390,7 +390,7 @@
         </div>
 
         <!--classifier marketing campaign-->
-        <div class="project-card" data-topic="datascience" data-complexity="intermediate" data-date="2024">
+        <div class="project-card" data-topic="datascience" data-complexity="intermediate" data-date="2024-03">
           <figure>
             <img
               src="img/projects/ml_ca_screen1.png"
@@ -424,7 +424,7 @@
         </div>
 
         <!--big data-->
-        <div class="project-card" data-topic="datascience" data-complexity="advanced" data-date="2024">
+        <div class="project-card" data-topic="datascience" data-complexity="advanced" data-date="2024-03">
           <figure class="w-full">
             <img
               src="img/projects/bigdata_ca_screen2.png"
@@ -459,7 +459,7 @@
         </div>
 
         <!--deep learning-->
-        <div class="project-card" data-topic="datascience" data-complexity="advanced" data-date="2024">
+        <div class="project-card" data-topic="datascience" data-complexity="advanced" data-date="2024-04">
           <figure>
             <img
               src="img/projects/deepl_ca_screen2.png"
@@ -493,7 +493,7 @@
         </div>
 
         <!--magpie-->
-        <div class="project-card" data-topic="softdev" data-complexity="advanced" data-date="2024">
+        <div class="project-card" data-topic="softdev" data-complexity="advanced" data-date="2024-12">
           <figure>
             <img
               src="img/projects/magpie_screen.png"
@@ -529,7 +529,7 @@
         </div>
 
         <!--to do list app-->
-        <div class="project-card" data-topic="softdev" data-complexity="intermediate" data-date="2025">
+        <div class="project-card" data-topic="softdev" data-complexity="intermediate" data-date="2025-03">
           <figure>
             <img
               src="img/projects/to-do-app-screen.png"
@@ -564,7 +564,7 @@
         </div>
 
         <!--portfolio website-->
-        <div class="project-card" data-topic="webdev" data-complexity="intermediate" data-date="2025">
+        <div class="project-card" data-topic="webdev" data-complexity="intermediate" data-date="2025-01">
           <figure>
             <img
               src="img/projects/portfolio_website.png"
