--- a/code/public/art.html
+++ b/code/public/art.html
@@ -44,8 +44,11 @@
       </label>-->
 
       <!-- Floating menu -->
-      <div class="fixed sm:right-12 sm:top-6 top-4 right-4 z-50">
-        <ul tabindex="0" class="menu p-0 gap-2">
+      <details class="dropdown sm:dropdown-bottom dropdown-top fixed sm:right-12 sm:top-6 top-3/4 right-4 z-50">
+        <summary id="nav-icon" class="m-2">
+          <img src="icons/menu-svgrepo-com.svg" alt="home-icon"class="h-5 w-5">
+        </summary>
+        <ul class="menu dropdown-content z-1 w-52 p-2 gap-2">
           <li id="nav-icon">
             <a class="lg:tooltip lg:tooltip-left" href="index.html" data-tip="Home">
               <img src="icons/home-svgrepo-com.svg" alt="home-icon"class="h-5 w-5">
@@ -67,7 +70,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </details>
 
       <!--contact modal-->
       <dialog id="my_modal_1" class="modal">
